--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@discordjs/voice": "^0.17.0",
     "discord.js": "^14.16.3",
     "dotenv": "^16.4.5",
-    "jsdoc": "^4.0.4"
+    "ffmpeg-static": "^5.2.0",
+    "jsdoc": "^4.0.4",
+    "libsodium-wrappers": "^0.7.15"
   }
 }
