--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "dotenv": "^16.4.5",
     "ffmpeg": "^0.0.4",
     "ffmpeg-static": "^5.2.0",
+    "get-audio-duration": "^4.0.1",
     "jsdoc": "^4.0.4",
-    "libsodium-wrappers": "^0.7.15"
+    "libsodium-wrappers": "^0.7.15",
+    "music-metadata": "^10.5.1"
   }
 }
